gitops/platform/overlays/stage/observability-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: grafana
  namespace: monitoring

spec:

  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system

  hostnames:
    - stage.challan.pro

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana

      backendRefs:
        - name: observability-grafana
          port: 80
